force-app/main/default/objects/Payment_Plan__c/fields/BYPASS__c.field-meta.xml
<CustomField>
    <fullName>BYPASS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this payment plan is bypassed for overpayment protection</description>
    <label>BYPASS</label>
    <type>Checkbox</type>
</CustomField>