force-app/main/default/objects/Payment_Plan__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Payment Plan</relationshipLabel>
    <relationshipName>Payment_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>