force-app/main/default/objects/Payment_Plan__c/fields/Payment_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Payment_Deadline__c</fullName>
    <label>Payment Deadline</label>
    <type>Date</type>
</CustomField>