force-app/main/default/objects/Payment_Plan__c/validationRules/Overpayment_Protection.validationRule-meta.xml
<ValidationRule>
    <fullName>Overpayment_Protection</fullName>
    <active>true</active>
    <description>Prevents overpayments unless BYPASS__c is checked</description>
    <errorConditionFormula>(Payment_Amount__c > Loan__r.Principal_Plus_Interest__c) && (NOT(BYPASS__c))</errorConditionFormula>
    <errorMessage>Payment amount cannot exceed the principal plus interest amount unless BYPASS__c is checked.</errorMessage>
</ValidationRule>